; ModuleID = '/home/carl/AnghaBench/git/extr_apply.c_prefix_patch.c'
source_filename = "/home/carl/AnghaBench/git/extr_apply.c_prefix_patch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.apply_state = type { i32 }
%struct.patch = type { i32, i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.apply_state*, %struct.patch*)* @prefix_patch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @prefix_patch(%struct.apply_state* %0, %struct.patch* %1) #0 {
  %3 = alloca %struct.apply_state*, align 8
  %4 = alloca %struct.patch*, align 8
  store %struct.apply_state* %0, %struct.apply_state** %3, align 8
  store %struct.patch* %1, %struct.patch** %4, align 8
  %5 = load %struct.apply_state*, %struct.apply_state** %3, align 8
  %6 = getelementptr inbounds %struct.apply_state, %struct.apply_state* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %2
  %10 = load %struct.patch*, %struct.patch** %4, align 8
  %11 = getelementptr inbounds %struct.patch, %struct.patch* %10, i32 0, i32 2
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %9, %2
  br label %24

15:                                               ; preds = %9
  %16 = load %struct.apply_state*, %struct.apply_state** %3, align 8
  %17 = load %struct.patch*, %struct.patch** %4, align 8
  %18 = getelementptr inbounds %struct.patch, %struct.patch* %17, i32 0, i32 1
  %19 = call i32 @prefix_one(%struct.apply_state* %16, i32* %18)
  %20 = load %struct.apply_state*, %struct.apply_state** %3, align 8
  %21 = load %struct.patch*, %struct.patch** %4, align 8
  %22 = getelementptr inbounds %struct.patch, %struct.patch* %21, i32 0, i32 0
  %23 = call i32 @prefix_one(%struct.apply_state* %20, i32* %22)
  br label %24

24:                                               ; preds = %15, %14
  ret void
}

declare dso_local i32 @prefix_one(%struct.apply_state*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
